--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,6 +27,8 @@
 		<footer class="main" id="f1">
 			<p><a href="http://es.wikipedia.org/wiki/Quiz">
 			Que es un Quiz?</a>&nbsp;&nbsp;|&nbsp; &nbsp;
+      <a href="https://github.com/RoberLozano/quiz-rls/">
+     Enlace al repositorio en GitHub</a></p>
 		</footer>
 	</div>
   </body>
